syntax = "proto3";

package onight.zjfae.afront.gens;
option java_outer_classname="QueryUserAccountDetail";
//Generated By BrewRobot:Mon Jun 25 17:12:35 CST 2018

message PBIFE_fund_queryUserAccountDetail{
	//

	string bankCode = 1; //,银行代码,

	string accountType = 2; //,账户类型,

	string needSms = 3; //,是否需要短信验证码,


}

message Ret_PBIFE_fund_queryUserAccountDetail{
	//

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_fund_queryUserAccountDetail data=3;


}

message REQ_PBIFE_fund_queryUserAccountDetail{
	//


}